--- a/app/src/main/res/layout/fragment_type.xml
+++ b/app/src/main/res/layout/fragment_type.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="20dp"
-        android:paddingTop="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:layout_marginLeft="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rv_gallery"
         android:scrollbars="none"/>
 
-</RelativeLayout>
+</LinearLayout>
