--- a/app/src/main/res/layout/fragment_type.xml
+++ b/app/src/main/res/layout/fragment_type.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/loading_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:indicator="BallPulse"
+        android:layout_gravity="center"
+        app:indicator_color="@color/colorPrimary" />
 
     <android.support.v7.widget.RecyclerView
         android:layout_marginLeft="20dp"
@@ -12,4 +22,4 @@
         android:id="@+id/rv_gallery"
         android:scrollbars="none"/>
 
-</LinearLayout>
+</FrameLayout>
