--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,28 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_1" android:icon="@android:drawable/ic_menu_camera"
+        <item android:id="@+id/nav_1"
             android:title="性感美女" />
-        <item android:id="@+id/nav_2" android:icon="@android:drawable/ic_menu_gallery"
+        <item android:id="@+id/nav_2"
             android:title="日韩美女" />
-        <item android:id="@+id/nav_3" android:icon="@android:drawable/ic_menu_slideshow"
+        <item android:id="@+id/nav_3"
             android:title="丝袜美腿" />
-        <item android:id="@+id/nav_4" android:icon="@android:drawable/ic_menu_manage"
+        <item android:id="@+id/nav_4"
             android:title="美女照片" />
-        <item android:id="@+id/nav_5" android:icon="@android:drawable/ic_menu_gallery"
+        <item android:id="@+id/nav_5"
             android:title="美女写真" />
-        <item android:id="@+id/nav_6" android:icon="@android:drawable/ic_menu_slideshow"
+        <item android:id="@+id/nav_6"
             android:title="清纯美女" />
-        <item android:id="@+id/nav_7" android:icon="@android:drawable/ic_menu_manage"
+        <item android:id="@+id/nav_7"
             android:title="性感车模" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="其他">
         <menu>
             <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="分享" />
             <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="反馈" />
         </menu>
     </item>
 
