对加载失败做了处理

--- a/app/src/main/res/layout/fragment_picture.xml
+++ b/app/src/main/res/layout/fragment_picture.xml
@@ -11,9 +11,35 @@
         app:indicator="BallPulse"
         android:layout_gravity="center"
         app:indicator_color="@color/colorPrimary" />
-    <ImageView
-        android:id="@+id/iv_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:visibility="gone"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/ll_gallery_detail_fail">
+            <TextView
+                android:textSize="9pt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="加载失败"
+                android:layout_gravity="center_horizontal" />
+            <Button
+                android:layout_marginTop="20dp"
+                android:id="@+id/btn_gallery_retry"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="重试"/>
+        </LinearLayout>
+        <ImageView
+            android:id="@+id/iv_picture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
+
 
 </FrameLayout>
